--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,8 @@ android {
 dependencies {
 
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
-    implementation "androidx.constraintlayout:constraintlayout:$rootProject.ext.constraintlayout"
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation "androidx.core:core-ktx:$rootProject.ext.core_ktx"
 
     implementation project(path: ':library')
 
