--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 //    ext.kotlin_version = "1.4.32"
-    ext.kotlin_version = '1.3.50'
+//    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,10 +21,8 @@ allprojects {
         jcenter()
     }
     ext {
-        appcompat = '1.3.0-rc01'
-        constraintlayout = '2.0.4'
-        stream = '1.2.2'
-        core_ktx = '1.3.2'
+        appcompat = '1.3.0'
+        core_ktx = '1.6.0'
     }
 }
 
